Add linkage between cam client and user.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,10 +22,15 @@
                 </form>
             </div>
 
-            <div class="content">
-                <h2 class="content-heading-2"></h2>
-                <p class="content-p"></p>
-                <h3 class="content-heading-3"></h3>
+            <div class="content invis" id="info">
+                <h1 id="content-heading-1"></h1>
+                <p id="content-p"></p>
+                <h2 id="content-heading-2"></h2>
+                <button type="button" id="play-button" class="invis">Play</button>
+                <div class="score">
+                    <p>Score: <span id="score-value">0</span></p>
+                    <p>Round: <span id="round-value">0</span></p>
+                </div>
             </div>
         </div>
 
