Have only 1 user play against robot per time.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,6 +14,7 @@
 
             <div class="form">
                 <form id="username-form">
+                    <h1 id="form-heading"></h1>
                     <label for="username">username</label>
                     <input type="text" id="username-input">
 
